# RustActixWeb4AsyncGraphQLSurrealDbEmbeddedStarter

./: .gitignore  Cargo.toml  Makefile  NOTES.md  NOTES_RELAY.md  README.md  TODO  backup.sh  client.http
src/: lib.rs  main.rs  schema.rs
src/app/: appstate.rs  mod.rs
src/db/: dbutil.rs  mod.rs  model.rs  util.rs
src/db/models/: person.rs
src/errors/: app.rs  mod.rs
src/person/: mod.rs  resolver.rs
src/person/model/: input.rs  mod.rs
src/person/models/: person.rs
src/person/repository/: find_by_filter.rs  find_person_by_id.rs  mod.rs
src/person/service/: find_person.rs  find_persons.rs  mod.rs
src/relay/: base_64_cursor.rs  mod.rs  validation.rs
src/star_wars/: mod.rs  model.rs
