[package]
name = "async-graphql-demo"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.12"
actix-web = "4"
actix-web-lab = "0.10"
actix-cors = "0.6"

async-graphql = "3"
async-graphql-actix-web = "3"

env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
# serde_derive = "1.0.136"
# derive_more = "0.99.17"
surrealdb = { version = "1.0.0-beta.8", features = ["kv-tikv"] }
uuid = "1.2.2"
base64 = "0.13.1"
thiserror = "1.0.37"
